{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 27,
  "lineage": "08842e07-9c0e-c8a7-0965-84fcb32a88c4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:security-group/sg-0047d0109919211ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0047d0109919211ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "infraforge-dev-vpc-endpoints-20251220103843032200000001",
            "name_prefix": "infraforge-dev-vpc-endpoints-",
            "owner_id": "715841344657",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-endpoints-sg",
              "Tenant": "platform"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-endpoints-sg",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:vpc-endpoint/vpce-0aa807649f1473788",
            "dns_entry": [
              {
                "dns_name": "vpce-0aa807649f1473788-8382lgcr.ec2.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0aa807649f1473788-8382lgcr-eu-west-1b.ec2.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0aa807649f1473788-8382lgcr-eu-west-1a.ec2.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0aa807649f1473788-8382lgcr-eu-west-1c.ec2.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ec2.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0482129Y4LAHW4QBKLY"
              },
              {
                "dns_name": "ec2.eu-west-1.api.aws",
                "hosted_zone_id": "Z04824733NL3OATU8J67Y"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0aa807649f1473788",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0304aeb9fe093ae14",
              "eni-08dcf0e91a3a7b333",
              "eni-0b8513119bb12c548"
            ],
            "owner_id": "715841344657",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0047d0109919211ef"
            ],
            "service_name": "com.amazonaws.eu-west-1.ec2",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.14.109",
                "subnet_id": "subnet-05ca8068a70d84652"
              },
              {
                "ipv4": "10.0.29.193",
                "subnet_id": "subnet-0393bdbb3484ae441"
              },
              {
                "ipv4": "10.0.40.188",
                "subnet_id": "subnet-0336cce74954ce09e"
              }
            ],
            "subnet_ids": [
              "subnet-0336cce74954ce09e",
              "subnet-0393bdbb3484ae441",
              "subnet-05ca8068a70d84652"
            ],
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-ec2-endpoint",
              "Tenant": "platform"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-ec2-endpoint",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:vpc-endpoint/vpce-0988ba292d83de596",
            "dns_entry": [
              {
                "dns_name": "vpce-0988ba292d83de596-2jqlwjkd.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0988ba292d83de596-2jqlwjkd-eu-west-1b.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0988ba292d83de596-2jqlwjkd-eu-west-1c.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0988ba292d83de596-2jqlwjkd-eu-west-1a.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "api.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0809123GT4WO3XDHQF0"
              },
              {
                "dns_name": "ecr.eu-west-1.api.aws",
                "hosted_zone_id": "Z04821282U4QAJD3KLMTE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0988ba292d83de596",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-018a3d4e5b7c8c042",
              "eni-0535134e8237d59fb",
              "eni-05e78787a78990ae6"
            ],
            "owner_id": "715841344657",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0047d0109919211ef"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.api",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.16.224",
                "subnet_id": "subnet-0393bdbb3484ae441"
              },
              {
                "ipv4": "10.0.46.244",
                "subnet_id": "subnet-0336cce74954ce09e"
              },
              {
                "ipv4": "10.0.8.241",
                "subnet_id": "subnet-05ca8068a70d84652"
              }
            ],
            "subnet_ids": [
              "subnet-0336cce74954ce09e",
              "subnet-0393bdbb3484ae441",
              "subnet-05ca8068a70d84652"
            ],
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-ecr-api-endpoint",
              "Tenant": "platform"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-ecr-api-endpoint",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:vpc-endpoint/vpce-00a1c1519cce146bf",
            "dns_entry": [
              {
                "dns_name": "vpce-00a1c1519cce146bf-silyo1hs.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-00a1c1519cce146bf-silyo1hs-eu-west-1a.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-00a1c1519cce146bf-silyo1hs-eu-west-1b.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-00a1c1519cce146bf-silyo1hs-eu-west-1c.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "dkr.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z023372919UMCKG2LYX9V"
              },
              {
                "dns_name": "*.dkr.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z023372919UMCKG2LYX9V"
              },
              {
                "dns_name": "dkr-ecr.eu-west-1.on.aws",
                "hosted_zone_id": "Z04821342836RHF1TD2KL"
              },
              {
                "dns_name": "*.dkr-ecr.eu-west-1.on.aws",
                "hosted_zone_id": "Z04821342836RHF1TD2KL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00a1c1519cce146bf",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03ad0e70604a95a08",
              "eni-0c1421443c0d3cf99",
              "eni-0eacac1b312d80505"
            ],
            "owner_id": "715841344657",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0047d0109919211ef"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.dkr",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.26.182",
                "subnet_id": "subnet-0393bdbb3484ae441"
              },
              {
                "ipv4": "10.0.38.220",
                "subnet_id": "subnet-0336cce74954ce09e"
              },
              {
                "ipv4": "10.0.7.122",
                "subnet_id": "subnet-05ca8068a70d84652"
              }
            ],
            "subnet_ids": [
              "subnet-0336cce74954ce09e",
              "subnet-0393bdbb3484ae441",
              "subnet-05ca8068a70d84652"
            ],
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-ecr-dkr-endpoint",
              "Tenant": "platform"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-ecr-dkr-endpoint",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:vpc-endpoint/vpce-0a52123027141b3ee",
            "cidr_blocks": [
              "3.5.64.0/21",
              "3.5.72.0/23",
              "52.92.0.0/17",
              "52.218.0.0/17"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a52123027141b3ee",
            "ip_address_type": "ipv4",
            "owner_id": "715841344657",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.eu-west-1.s3",
            "service_region": "eu-west-1",
            "state": "available",
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-s3-endpoint",
              "Tenant": "platform"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-s3-endpoint",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:vpc-endpoint/vpce-0f5df43f469a1d674",
            "dns_entry": [
              {
                "dns_name": "vpce-0f5df43f469a1d674-x1ljpxtc.sts.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0f5df43f469a1d674-x1ljpxtc-eu-west-1b.sts.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0f5df43f469a1d674-x1ljpxtc-eu-west-1c.sts.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0f5df43f469a1d674-x1ljpxtc-eu-west-1a.sts.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "sts.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z02341323UJTMS9O3EZ3Q"
              },
              {
                "dns_name": "sts.eu-west-1.api.aws",
                "hosted_zone_id": "Z02341372QXR4Y0O0ISWP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f5df43f469a1d674",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-017c3a99262ab3aad",
              "eni-052b0ba3561d4cbfb",
              "eni-08f7bc3c68e1491c8"
            ],
            "owner_id": "715841344657",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0047d0109919211ef"
            ],
            "service_name": "com.amazonaws.eu-west-1.sts",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.23.182",
                "subnet_id": "subnet-0393bdbb3484ae441"
              },
              {
                "ipv4": "10.0.3.218",
                "subnet_id": "subnet-05ca8068a70d84652"
              },
              {
                "ipv4": "10.0.36.109",
                "subnet_id": "subnet-0336cce74954ce09e"
              }
            ],
            "subnet_ids": [
              "subnet-0336cce74954ce09e",
              "subnet-0393bdbb3484ae441",
              "subnet-05ca8068a70d84652"
            ],
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-sts-endpoint",
              "Tenant": "platform"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-sts-endpoint",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:security-group/sg-01f8d4c68799bbea8",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-01f8d4c68799bbea8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ddb0e3e1200a8e90"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "infraforge-dev-cluster-20251220104000341500000007",
            "name_prefix": "infraforge-dev-cluster-",
            "owner_id": "715841344657",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-cluster",
              "Tenant": "platform"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-cluster",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.sts",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:security-group/sg-0ddb0e3e1200a8e90",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddb0e3e1200a8e90",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f8d4c68799bbea8"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f8d4c68799bbea8"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f8d4c68799bbea8"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f8d4c68799bbea8"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f8d4c68799bbea8"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f8d4c68799bbea8"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "infraforge-dev-node-20251220104000341500000006",
            "name_prefix": "infraforge-dev-node-",
            "owner_id": "715841344657",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-node",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "owned"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-node",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.sts",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3183367494",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01f8d4c68799bbea8",
            "security_group_rule_id": "sgr-0c941e6497b9cf22a",
            "self": false,
            "source_security_group_id": "sg-0ddb0e3e1200a8e90",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.sts",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3138552953",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ddb0e3e1200a8e90",
            "security_group_rule_id": "sgr-03d1df96b8f238ee5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.sts",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2298017224",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ddb0e3e1200a8e90",
            "security_group_rule_id": "sgr-0056e4f311ebcf459",
            "self": false,
            "source_security_group_id": "sg-01f8d4c68799bbea8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.sts",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1078599028",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ddb0e3e1200a8e90",
            "security_group_rule_id": "sgr-06538121a29fe7522",
            "self": false,
            "source_security_group_id": "sg-01f8d4c68799bbea8",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.sts",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2299034338",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ddb0e3e1200a8e90",
            "security_group_rule_id": "sgr-0f568e6eec5bf8830",
            "self": false,
            "source_security_group_id": "sg-01f8d4c68799bbea8",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.sts",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2589214403",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ddb0e3e1200a8e90",
            "security_group_rule_id": "sgr-0b0f99adeeb01ee45",
            "self": false,
            "source_security_group_id": "sg-01f8d4c68799bbea8",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.sts",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-4277499144",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ddb0e3e1200a8e90",
            "security_group_rule_id": "sgr-0afcc0404282429ae",
            "self": false,
            "source_security_group_id": "sg-01f8d4c68799bbea8",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.sts",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-495815094",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ddb0e3e1200a8e90",
            "security_group_rule_id": "sgr-04cfa093378162db9",
            "self": false,
            "source_security_group_id": "sg-01f8d4c68799bbea8",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.sts",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3595350531",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ddb0e3e1200a8e90",
            "security_group_rule_id": "sgr-035483b64c5f15bb0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.sts",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3457235764",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ddb0e3e1200a8e90",
            "security_group_rule_id": "sgr-063292b6d352ab916",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.sts",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1783535835",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ddb0e3e1200a8e90",
            "security_group_rule_id": "sgr-0a6a5dc999f17bf95",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.sts",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:network-acl/acl-0960ca9849f341fba",
            "default_network_acl_id": "acl-0960ca9849f341fba",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0960ca9849f341fba",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "715841344657",
            "subnet_ids": [
              "subnet-02b5516b90ce2e29e",
              "subnet-0336cce74954ce09e",
              "subnet-0393bdbb3484ae441",
              "subnet-059137a2c04a017a4",
              "subnet-05ca8068a70d84652",
              "subnet-0628ffb902e52bf9f",
              "subnet-06c57e0e36d6ef506",
              "subnet-089884572cac79d55",
              "subnet-0acdbebbcec0ad2ef"
            ],
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-default",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-default",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:route-table/rtb-06c5557624a4cac63",
            "default_route_table_id": "rtb-06c5557624a4cac63",
            "id": "rtb-06c5557624a4cac63",
            "owner_id": "715841344657",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-default",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-default",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:security-group/sg-0977015cd2ad78d32",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0977015cd2ad78d32",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "715841344657",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-default",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-default",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036d6fdccf45e5988",
            "arn": "arn:aws:ec2:eu-west-1:715841344657:elastic-ip/eipalloc-036d6fdccf45e5988",
            "association_id": "eipassoc-084e3caa9efe31e49",
            "domain": "vpc",
            "id": "eipalloc-036d6fdccf45e5988",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-07f419ee544ffc350",
            "private_dns": "ip-10-0-100-46.eu-west-1.compute.internal",
            "private_ip": "10.0.100.46",
            "public_dns": "ec2-34-249-205-159.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.249.205.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-eu-west-1a",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-eu-west-1a",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:internet-gateway/igw-03aa1fb4451f12017",
            "id": "igw-03aa1fb4451f12017",
            "owner_id": "715841344657",
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036d6fdccf45e5988",
            "association_id": "eipassoc-084e3caa9efe31e49",
            "connectivity_type": "public",
            "id": "nat-0532a51bd3d963254",
            "network_interface_id": "eni-07f419ee544ffc350",
            "private_ip": "10.0.100.46",
            "public_ip": "34.249.205.159",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-089884572cac79d55",
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-eu-west-1a",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-eu-west-1a",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09df1eb5886be76a51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0532a51bd3d963254",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09df1eb5886be76a5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03aa1fb4451f12017",
            "id": "r-rtb-0ac0ecd3d45fb6da51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ac0ecd3d45fb6da5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:route-table/rtb-09df1eb5886be76a5",
            "id": "rtb-09df1eb5886be76a5",
            "owner_id": "715841344657",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0532a51bd3d963254",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-private",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-private",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:route-table/rtb-0ac0ecd3d45fb6da5",
            "id": "rtb-0ac0ecd3d45fb6da5",
            "owner_id": "715841344657",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03aa1fb4451f12017",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-public",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-public",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad680e695e179a13",
            "route_table_id": "rtb-09df1eb5886be76a5",
            "subnet_id": "subnet-02b5516b90ce2e29e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0741f36a614c53c98",
            "route_table_id": "rtb-09df1eb5886be76a5",
            "subnet_id": "subnet-059137a2c04a017a4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032c4495512321fcb",
            "route_table_id": "rtb-09df1eb5886be76a5",
            "subnet_id": "subnet-0acdbebbcec0ad2ef"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06520978208506386",
            "route_table_id": "rtb-09df1eb5886be76a5",
            "subnet_id": "subnet-05ca8068a70d84652"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05385d87365945333",
            "route_table_id": "rtb-09df1eb5886be76a5",
            "subnet_id": "subnet-0393bdbb3484ae441"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00524bd1b02eded36",
            "route_table_id": "rtb-09df1eb5886be76a5",
            "subnet_id": "subnet-0336cce74954ce09e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe9bc4d41a695078",
            "route_table_id": "rtb-0ac0ecd3d45fb6da5",
            "subnet_id": "subnet-089884572cac79d55"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074a62c5ebfcaf00e",
            "route_table_id": "rtb-0ac0ecd3d45fb6da5",
            "subnet_id": "subnet-0628ffb902e52bf9f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088dc850bb491b2c2",
            "route_table_id": "rtb-0ac0ecd3d45fb6da5",
            "subnet_id": "subnet-06c57e0e36d6ef506"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:subnet/subnet-02b5516b90ce2e29e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b5516b90ce2e29e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841344657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-db-eu-west-1a",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-db-eu-west-1a",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:subnet/subnet-059137a2c04a017a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059137a2c04a017a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841344657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-db-eu-west-1b",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-db-eu-west-1b",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:subnet/subnet-0acdbebbcec0ad2ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acdbebbcec0ad2ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841344657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-db-eu-west-1c",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-db-eu-west-1c",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:subnet/subnet-05ca8068a70d84652",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ca8068a70d84652",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841344657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-private-eu-west-1a",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-private-eu-west-1a",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:subnet/subnet-0393bdbb3484ae441",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0393bdbb3484ae441",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841344657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-private-eu-west-1b",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-private-eu-west-1b",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:subnet/subnet-0336cce74954ce09e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0336cce74954ce09e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841344657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-private-eu-west-1c",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-private-eu-west-1c",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:subnet/subnet-089884572cac79d55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089884572cac79d55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841344657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-public-eu-west-1a",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-public-eu-west-1a",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:subnet/subnet-0628ffb902e52bf9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0628ffb902e52bf9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841344657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-public-eu-west-1b",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-public-eu-west-1b",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:subnet/subnet-06c57e0e36d6ef506",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c57e0e36d6ef506",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841344657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc-public-eu-west-1c",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc-public-eu-west-1c",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-000a0bc71bfc8a387"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:715841344657:vpc/vpc-000a0bc71bfc8a387",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0960ca9849f341fba",
            "default_route_table_id": "rtb-06c5557624a4cac63",
            "default_security_group_id": "sg-0977015cd2ad78d32",
            "dhcp_options_id": "dopt-06f15415cd5444efc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-000a0bc71bfc8a387",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c5557624a4cac63",
            "owner_id": "715841344657",
            "tags": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "Name": "infraforge-dev-vpc",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            },
            "tags_all": {
              "Cluster": "infraforge-dev",
              "Environment": "dev",
              "ManagedBy": "OpenTofu",
              "Name": "infraforge-dev-vpc",
              "Owner": "gokhan@infraforge.io",
              "Platform": "InfraForge",
              "Tenant": "platform",
              "kubernetes.io/cluster/infraforge-dev": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}